# little-manager

./: .gitignore  .gitlab-ci.yml  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  coverage.out  lcov.info  sonar-project.propertie  sonar-project.properties
.cargo/: config.toml
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/model/: group.rs  groupmembers.rs  mod.rs  task.rs  taskprogress.rs  tasktime.rs  timerecord.rs
crates/libs/lib-core/src/model/base/: crud_fns.rs  macro_utils.rs
crates/libs/lib-web/src/handlers/: handlers_signin.rs  mod.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: main.rs
crates/services/web-server/src/web/: mod.rs  routes_signin.rs
crates/services/web-server/src/web/rpcs/: mod.rs  project_rpc.rs  task_rpc.rs  (+3 more)
frontend/little-manager/: README.md  bun.lockb  package.json
frontend/little-manager/src/: App.vue
frontend/little-manager/src/components/: ProjectItem.vue  TaskItem.vue  TaskProgress.vue  TaskTime.vue  TimeRecords.vue
frontend/little-manager/src/router/: index.ts
frontend/little-manager/src/views/: ProjectView.vue  TaskView.vue  TimeRecordView.vue
sql/dev_initial/: 01-create-schema.sql
src/: main.rs
web-folder/: home.html  index.html  login.html  signin.html  signout.html  timerecord.html
web-folder/css/: dialog.css
web-folder/js/: common.js  dialog.js  header.js  project.js  signin.js  signout.js  timerecord.js
