[package]
name = "little-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Async
tokio = { version = "1.44.1", features = ["full"] }
async-trait = "0.1"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower-cookies = "0.10"
tower = { version = "0.5.2", features = ["full"] }
# -- Tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
# -- Metrics Layer
axum-prometheus = "0.8.0"
# -- Others
time = "0.3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
strum_macros = "0.25"
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
